[package]
name = "itu_openrss"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tokio = { version = "1.5.0", features = ["rt-multi-thread"] }
serde_json = "1.0.61"
scraper = "0.12.0"
reqwest = "0.11.4"
chrono = "0.4.19"
rss = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.5.4"
log = "0.4.14"
pretty_env_logger = "0.4.0"
tabled = "0.2.2"
